# self-doc

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  design.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  mypy.ini  ruff.toml
.github/workflows/: test.yml
cli/: go.mod  main.go
cli/cmd/: get.go  root.go  search.go  skill.go  skill_test.go  tree.go
cli/cmd/skill_asset/: SKILL.md
cli/internal/api/: client.go  client_test.go
cli/internal/format/: output.go  output_test.go
config/: models.yaml
db/init/: 01_schema.sql  01_schema.sql.template  02_sources_config.sql  03_fix_embedding_dim.sql
docs/: client-setup.md  runbook.md
docs/adr/: 001-custom-pipeline-over-off-the-shelf.md  002-nuke-and-rebuild-schema-evolution.md  003-llms-txt-etag-multilang-fts.md  004-selectable-embedding-models.md
docs/n8n/: README.md  docs-sync.json
ingestion/: Dockerfile  pyproject.toml
ingestion/app/: admin.py  chunker.py  config.py  crawler.py  embedder.py  extract.py  llms_txt.py  logging_config.py  main.py  scheduler.py  sources.yaml  sources_repo.py  store.py  urlscope.py
ingestion/app/templates/admin/: _chunks_partial.html  _sync_status_partial.html  base.html  docs.html  form.html  index.html  login.html  message.html
ingestion/config/: sources.yaml
ingestion/tests/: conftest.py  test_admin.py  test_api.py  test_chunker.py  test_config.py  test_crawler.py  test_embedder.py  test_extract.py  test_llms_txt.py  test_main.py  test_migration.py  test_scheduler.py  test_sources_repo.py  test_store.py  test_urlscope.py
mcp-server/: Dockerfile  pyproject.toml
mcp-server/app/: retrieval.py  server.py
mcp-server/tests/: test_registry_defaults.py  test_retrieval.py  test_retrieval_integration.py  test_server.py
scripts/: backup.sh  configure_model.py  migrate.sh  push_sources.py
tests/: pytest.ini  test_e2e.py  test_model_registry.py  test_push_sources.py
tests/eval/: conftest.py  eval_cases.yaml  test_retrieval_quality.py
