[project]
name = "ingestion"
version = "0.1.0"
description = "Self-docs ingestion engine: crawl, extract, chunk, embed documentation sites."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "trafilatura>=1.12",
    "fastembed>=0.3",
    "psycopg[binary]>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "tokenizers>=0.19",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
