[project]
name = "self-docs-mcp-server"
version = "0.1.0"
description = "Retrieval MCP server for the self-docs RAG pipeline (search_docs / list_doc_sources)"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=3,<4",
    "fastembed",
    "psycopg[binary]",
    "psycopg_pool",
    "structlog",
    "prometheus-client",
]

[dependency-groups]
dev = [
    "pytest",
    "pyyaml",
    # Only for the cross-package parity test that loads ingestion/app/config.py
    # (which imports ingestion/app/urlscope.py -> defusedxml) from disk.
    "defusedxml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
